--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-template-solid",
+  "name": "Mcmpacme-Solid-App",
   "version": "0.0.1",
   "description": "",
   "type": "module",
